--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Document</title>
     my name is snajee
+    no thats right 
 </head>
 <body>
     
