--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     my name is snajee
     no thats right 
+    my name is snajee 
+    no thats not my name
 </head>
 <body>
     
